Update backend and smtp setup code

--- a/website/server/package.json
+++ b/website/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "The backend for this website is intentionally designed as a lightweight, service-oriented communication layer that supports a client-facing fire safety service site. Its primary function is to receive inquiry requests from users and forward them directly to the business via email. This enables lead generation without requiring a database, user accounts, or an administrative dashboard.",
   "main": "ating the need for dynamic rendering or database-driven content. “Call Now” and other action buttons operate through direct device integrations (e.g., tel: links) and do not require backend support.",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server"
@@ -10,7 +11,10 @@
   "author": "anshu developer",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "nodemailer": "^7.0.12",
     "nodemon": "^3.1.11"
   }
 }
